2007-01-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-opentechpress-jp.el: Inherit `shimbun-multi' class in
	addition to `shimbun-rss'.
	(shimbun-multi-next-url, shimbun-multi-clear-contents): New
	methods.

2007-01-16  Tsuyoshi CHO  <tsuyoshi_cho@ybb.ne.jp>

	* shimbun/sb-slashdot-jp.el (shimbun-slashdot-jp-group-alist): Add
	new group - IT & Hardware section.

2007-01-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yahoo.el (shimbun-get-headers): Look for articles in
	next pages in addition to past pages.

2007-01-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yahoo.el (shimbun-yahoo-groups-table): Move regexp
	from shimbun-get-headers and improve; update groups for all
	prefectures.
	(shimbun-get-headers): Move regexp to shimbun-yahoo-groups-table;
	ignore access ranking section; improve handling of old articles;
	support range.
	(shimbun-make-contents): Remove headline and garbage.

2007-01-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-prepare-article): Remove left
	margin from articles in culture.yurufemi group.

	* w3m-e21.el (w3m-e21-switch-to-buffer): Add iswitchb-mode support.

2007-01-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/nnshimbun.el (nnshimbun-index-range): Changed its
	default value to 2 from nil.

2007-01-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-modeline-title): Don't use w3m-force-window-update
	which obstructs viewing of large images.  Reported by Chris Moore
	<dooglus@gmail.com>.

2007-01-06  David Hansen  <david.hansen@physik.fu-berlin.de>

	* shimbun/sb-fau.el (shimbun-fau-x-face-alist): Quote bracket in
	column one.
	(shimbun-fau-content-end): Relaxed.

2007-01-05  David Hansen  <david.hansen@physik.fu-berlin.de>

	* shimbun/sb-the-register.el (shimbun-make-contents): Improve junk
	filtering.
	(shimbun-the-register-content-end): Fixed.

	* shimbun/sb-weeklyworldnews.el: Complete rewrite to follow the
	site changes.
